--- a/Makefile.am
+++ b/Makefile.am
@@ -3,6 +3,6 @@ chronicle_SOURCES = chronicle.h chronicle.cpp screen.h screen.cpp parse_opts.h p
 
 ACLOCAL_AMFLAGS = -I build-aux
 
-AM_CXXFLAGS=$(RTAUDIO_CFLAGS) $(SNDFILE_CFLAGS) $(NCURSES_CFLAGS) $(BOOST_CPPFLAGS)
+AM_CXXFLAGS=$(RTAUDIO_CFLAGS) $(SNDFILE_CFLAGS) $(NCURSES_CFLAGS) $(BOOST_CPPFLAGS) -g -std=c++11
 AM_LDFLAGS=$(BOOST_FILESYSTEM_LDFLAGS) $(BOOST_SYSTEM_LDFLAGS)
 LIBS=$(RTAUDIO_LIBS) $(SNDFILE_LIBS) $(NCURSES_LIBS) $(BOOST_FILESYSTEM_LIBS) $(BOOST_SYSTEM_LIBS) -lmp3lame
