--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -8,7 +8,7 @@ linux_build_task:
   
   apt_script:
     - apt-get update -qq
-    - apt-get install libncurses5-dev libsndfile1-dev libasound2 libasound2-dev git build-essential wget libtool libtool-bin -qq -y
+    - apt-get install libncurses5-dev libsndfile1-dev libasound2 libasound2-dev git build-essential libtool libtool-bin wget -qq -y
 
   boost_cache:
     folder: boost_1_68_0
