--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -8,7 +8,6 @@ linux_build_task:
   
   apt_script:
     - apt-get update -qq
-    - #apt-get install libncurses5-dev libsndfile1-dev libasound2 libasound2-dev git build-essential libtool libtool-bin wget -qq -y
     - apt-get install libncurses5-dev libsndfile1-dev libasound2 libasound2-dev git build-essential libtool libtool-bin wget -qq -y
 
   boost_cache:
@@ -78,7 +77,7 @@ windows_build_task:
 
   apt_script:
     - apt-get update -qq
-    - apt-get install mingw-w64 mingw-w64-tools pkg-config git libtool libtool-bin -qq -y
+    - apt-get install mingw-w64 mingw-w64-tools pkg-config git libtool libtool-bin build-essential wget -qq -y
 
   submodules_script:
     - git submodule init
