--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -76,84 +76,51 @@ windows_build_task:
     image: ubuntu:latest
 
   apt_script:
-    - apt-get update -qq
-    - apt-get install mingw-w64 mingw-w64-tools pkg-config git libtool libtool-bin build-essential wget autoconf automake -qq -y
+    - .ci/mingw-64/apt-script.sh
 
   submodules_script:
-    - git submodule init
-    - git submodule update
-    
+    - .ci/mingw-64/git-submodules-script.sh
+
   lame_cache:
     folder: lame-3.100
     populate_script:
-      - wget https://netix.dl.sourceforge.net/project/lame/lame/3.100/lame-3.100.tar.gz
-      - tar xf lame-*
-      - cd lame-3.100
-      - ./configure --disable-decoder --disable-shared --enable-static --host=x86_64-w64-mingw32
+      - .ci/mingw-64/lame-download-script.sh
   
   lame_build_script:
-    - cd lame-3.100
-    - make
-    - make install
+    - .ci/mingw-64/lame-install-script.sh
 
   libsndfile_cache:
     folder: libsndfile-1.0.28
     populate_script:
-      - wget http://www.mega-nerd.com/libsndfile/files/libsndfile-1.0.28.tar.gz
-      - tar xf libsndfile-1.0.28.tar.gz
-      - cd libsndfile-1.0.28
-      - ./configure --host=x86_64-w64-mingw32
+      - .ci/mingw-64/libsndfile-download-script.sh # <---- Get libflac, libogg, libvorbis, vorbisenc
 
   libsndfile_build_script:
-    - cd libsndfile-1.0.28
-    - make
-    - make install
+    - .ci/mingw-64/libsndfile-install-script.sh
 
   rtaudio_cache: 
     folder: rtaudio
     populate_script:
-      - git clone http://github.com/thestk/rtaudio
-      - cd rtaudio
-      - ./autogen.sh --no-configure
-      - export CFLAGS=-Wno-unused-but-set-variable # We need this for the RtAudio build
-      - ./configure --host=x86_64-w64-mingw32
+      - .ci/mingw-64/rtaudio-download-script.sh
 
   rtaudio_build_script:
   # Depends on libsndfile
-    - cd rtaudio
-    - make
-    - make install
+    - .ci/mingw-64/rtaudio-install-script.sh
 
   ncurses_cache:
     folder: ncurses-6.1
     populate_script:
-      - wget ftp://ftp.invisible-island.net/ncurses/ncurses-6.1.tar.gz
-      - tar xf ncurses-6.1.tar.gz
-      - cd ncurses-6.1
-      - ./configure --enable-term-driver --enable-sp-funcs --host=x86_64-w64-mingw32 --with-build-cc=gcc --with-pkg-config-libdir=${PKG_CONFIG_PATH} --enable-pc-files --prefix=/usr/local
-      #--prefix=/usr/local/x86_64-w64-mingw32
+      - .ci/mingw-64/ncurses-download-script.sh
   
   ncurses_build_script:
-    - cd ncurses-6.1
-    - make
-    - make install
+    - .ci/mingw-64/ncurses-install-script.sh
 
   boost_cache:
     folder: boost_1_68_0
     populate_script:
-      - wget https://dl.bintray.com/boostorg/release/1.68.0/source/boost_1_68_0.tar.gz
-      - tar xf boost_1_68_0.tar.gz
-      - cd boost_1_68_0
-      - 'echo "using gcc : : x86_64-w64-mingw32-gcc ;" > user-config.jam'
-      - ./bootstrap.sh --with-libraries=system,filesystem --prefix=/usr/local
+      - .ci/mingw-64/boost-download-script.sh
 
   boost_build_script:
-  - cd boost_1_68_0
-  - ./b2 --user-config=user-config.jam toolset=gcc target-os=windows release address-model=64 architecture=x86 install
-  #- ./b2 toolset=gcc-mingw target-os=windows release address-model=64 architecture=x86
+    - .ci/mingw-64/boost-install-script.sh
 
   build_script:
-    #- pkg-config rtaudio --debug
-    - chmod +x autogen.sh
-    - ./autogen.sh
-    - ./configure --disable-shared --enable-static --host=x86_64-w64-mingw32 --prefix=/usr/local && make
+    - .ci/mingw-64/chronicle-build-script.sh
