--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -1,59 +1,44 @@
+env:
+  - CHRONICLE_NAME=chronicle
+  - CHRONICLE_VERSION=1.0.0
+  - CHRONICLE_TRIPLET=${CHRONICLE_NAME}-${CHRONICLE_VERSION}-${CIRRUS_OS}
+
 linux_build_task:
   container:
     image: gcc:latest
 
   apt_script:
-    - apt-get update -qq
-    - apt-get install libncurses5-dev libsndfile1-dev libasound2 libasound2-dev git build-essential libtool libtool-bin wget -qq -y
+    - .ci/linux/apt-deps.sh
 
   boost_cache:
     folder: boost_1_68_0
     populate_script:
-      - wget https://dl.bintray.com/boostorg/release/1.68.0/source/boost_1_68_0.tar.gz
-      - tar xf boost_1_68_0.tar.gz
-      - cd boost_1_68_0
-      - ./bootstrap.sh --with-libraries=system,filesystem
+      - .ci/linux/boost-download.sh
   
   boost_build_script:
-    - cd boost_1_68_0
-    - ./b2 install
+    - .ci/linux/boost-install.sh
   
   lame_cache:
     folder: lame-3.100
     populate_script:
-      - wget https://netix.dl.sourceforge.net/project/lame/lame/3.100/lame-3.100.tar.gz
-      - tar xf lame-*
-      - cd lame-3.100
-      - ./configure --disable-decoder
+      - .ci/linux/lame-download.sh
   
   lame_build_script:
-    - cd lame-3.100
-    - make
-    - make install
+    - .ci/linux/lame-install.sh
 
   rtaudio_cache: 
     folder: rtaudio-5.0.0
     populate_script:
-      - wget http://www.music.mcgill.ca/~gary/rtaudio/release/rtaudio-5.0.0.tar.gz
-      - tar xf rtaudio-*
-      - cd rtaudio-5.0.0
-      - ./configure
+      - .ci/linux/rtaudio-download.sh
 
   rtaudio_build_script:
-    - cd rtaudio-5.0.0
-    - make
-    - make install
+    - .ci/linux/rtaudio-install.sh
 
   build_script:
-    - chmod +x autogen.sh
-    - ./autogen.sh
-    - mkdir -p chronicle-v1.0.0-linux
-    - cd chronicle-v1.0.0-linux
-    - ../configure && make
+    - .ci/linux/chronicle-build.sh
 
   dist_script:
-    - chmod +x .ci/linux/dist-script.sh
-    - .ci/linux/dist-script.sh
+    - .ci/linux/dist.sh
 
 windows_build_task:
   # Most sources need to be built from scratch, since the mingw version of pkg-config ignores PKG_CONFIG_PATH
