correct env decl

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -1,7 +1,7 @@
 env:
-  - CHRONICLE_NAME=chronicle
-  - CHRONICLE_VERSION=1.0.0
-  - CHRONICLE_TRIPLET=${CHRONICLE_NAME}-${CHRONICLE_VERSION}-${CIRRUS_OS}
+  - CHRONICLE_NAME: chronicle
+  - CHRONICLE_VERSION: 1.0.0
+  - CHRONICLE_TRIPLET: ${CHRONICLE_NAME}-${CHRONICLE_VERSION}-${CIRRUS_OS}
 
 linux_build_task:
   container:
