what happens if you discard the boost entries...
Former-commit-id: 50536707f0496b3500f8a7b59214a1e16d1f0a62

--- a/configure.ac
+++ b/configure.ac
@@ -8,9 +8,9 @@ AC_LANG(C++)
 AC_PROG_CPP
 AC_PROG_CXX
 LT_INIT
-BOOST_REQUIRE([1.65.0])
-BOOST_FILESYSTEM(mt)
-BOOST_SYSTEM
+dnl BOOST_REQUIRE([1.65.0])
+dnl BOOST_FILESYSTEM(mt)
+dnl BOOST_SYSTEM
 
 AC_CHECK_HEADERS([cstring])
 PKG_CHECK_MODULES(RTAUDIO, rtaudio)
