Add BOOST_ROOT var to where boost is installed
Former-commit-id: d648a8b31e60a6e0ba0c0e72b747494e7dcea0ae

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -46,6 +46,7 @@ windows_build_task:
   env:
     # Let's do it just for conveniences' sake
     PKG_CONFIG_PATH: /usr/local/lib/pkgconfig
+    BOOST_ROOT: /usr/x86_64-w64-mingw32/include/boost-1_68/
   container:
     image: ubuntu:latest
 
