Got version bump wrong :grin:
Former-commit-id: 49b4983d40639af8061c52f3c097e551d28ea924

--- a/configure.ac
+++ b/configure.ac
@@ -1,4 +1,4 @@
-AC_INIT([chronicle], [1.0.1, [calmcl1@aol.com])
+AC_INIT([chronicle], [1.0.1], [calmcl1@aol.com])
 AC_CONFIG_AUX_DIR([build-aux])
 AC_CANONICAL_HOST
 AM_INIT_AUTOMAKE([foreign subdir-objects])
