--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,3 @@
-[submodule "spdlog"]
-	path = spdlog
-	url = https://github.com/gabime/spdlog
-	branch = master
+[submodule "rtaudio"]
+	path = rtaudio
+	url = http://github.com/thestk/rtaudio.git
