--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
-[submodule "rtaudio"]
-	path = rtaudio
-	url = http://github.com/thestk/rtaudio.git
+[submodule "spdlog"]
+	path = spdlog
+	url = https://github.com/gabime/spdlog
+	branch = v1.x
