--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -22,7 +22,7 @@ linux_build_task:
       - wget https://github.com/Kitware/CMake/releases/download/v3.15.2/cmake-3.15.2-Linux-x86_64.tar.gz
       - tar xf cmake-3.15.2-Linux-x86_64.tar.gz
   
-  cmake_install: cp -r cmake-3.15.2-Linux-x86_64/* /
+  cmake_install_script: cp -r cmake-3.15.2-Linux-x86_64/* /
 
   submodules_script: git submodule sync --recursive && git submodule update --init --recursive
 
@@ -78,7 +78,7 @@ win64_build_task:
       - wget https://github.com/Kitware/CMake/releases/download/v3.15.2/cmake-3.15.2-Linux-x86_64.tar.gz
       - tar xf cmake-3.15.2-Linux-x86_64.tar.gz
   
-  cmake_install: cp -r cmake-3.15.2-Linux-x86_64/* /
+  cmake_install_script: cp -r cmake-3.15.2-Linux-x86_64/* /
 
   submodules_script: git submodule sync --recursive && git submodule update --init --recursive
 
@@ -183,7 +183,7 @@ win32_build_task:
       - wget https://github.com/Kitware/CMake/releases/download/v3.15.2/cmake-3.15.2-Linux-x86_64.tar.gz
       - tar xf cmake-3.15.2-Linux-x86_64.tar.gz
   
-  cmake_install: cp -r cmake-3.15.2-Linux-x86_64/* /
+  cmake_install_script: cp -r cmake-3.15.2-Linux-x86_64/* /
 
   submodules_script: git submodule sync --recursive && git submodule update --init --recursive
 
