--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,16 +14,11 @@ add_compile_options(-DSPDLOG_COMPILED_LIB -D_WIN32_WINNT=0x600 -D_ISOC99_SOURCE 
 #add_subdirectory(rtaudio)
 add_subdirectory(spdlog)
 
-if (UNIX)
-    find_library(LAME_LIB libmp3lame.a)
-    if(LAME_LIB OR lame_FOUND)
-            message(STATUS "Found libmp3lame")
-    else()
-            message(FATAL_ERROR "Could not find libmp3lame! Exiting...")
-    endif()
-else()
-    message(STATUS "Not looking for LAME library")
-endif()
+#if (UNIX)
+find_library(LAME_LIB libmp3lame.a)
+#else()
+#    message(STATUS "Not looking for LAME library")
+#endif()
 
 find_library(SNDFILE_LIB sndfile)
 if (SNDFILE_LIB OR sndfile_FOUND)
