Add RTAudio find path

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,7 +33,7 @@ endif()
 find_library(RTAUDIO_LIB rtaudio)
 #pkg_check_modules(RtAudio REQUIRED IMPORTED_TARGET rtaudio)
 if (RTAUDIO_LIB OR rtaudio_FOUND)
-    message(STATUS "Found RtAudio: ${RtAudio_VERSION}")
+    message(STATUS "Found RtAudio: ${RTAUDIO_LIB}")
 else()
     message(FATAL_ERROR "Could not find RtAudio! Exiting...")
 endif()
